--- a/Bank-API.PresentationLayer/Bank-API.PresentationLayer.csproj
+++ b/Bank-API.PresentationLayer/Bank-API.PresentationLayer.csproj
@@ -1,23 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Bank_API.PresentationLayer</RootNamespace>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<RootNamespace>Bank_API.PresentationLayer</RootNamespace>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-	
 	<ItemGroup>
 		<ProjectReference Include="..\Bank-API.BusinessLogicLayer\Bank-API.BusinessLogicLayer.csproj" />
 		<ProjectReference Include="..\Bank-API.DataAccessLayer\Bank-API.DataAccessLayer.csproj" />
 	</ItemGroup>
-	
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
+
+	<ItemGroup>
+		<Folder Include="Controllers\" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.4.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.4.0" />
+	</ItemGroup>
 
 </Project>
