Add user registration

--- a/Bank-API.BusinessLogicLayer/Bank-API.BusinessLogicLayer.csproj
+++ b/Bank-API.BusinessLogicLayer/Bank-API.BusinessLogicLayer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -6,13 +6,13 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
-
+	
 	<ItemGroup>
-		<ProjectReference Include="..\Bank-API.DataAccessLayer\Bank-API.DataAccessLayer.csproj" />
+		<PackageReference Include="Isopoh.Cryptography.Argon2" Version="1.1.12" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Models\" />
+		<ProjectReference Include="..\Bank-API.DataAccessLayer\Bank-API.DataAccessLayer.csproj" />
 	</ItemGroup>
 
 </Project>
