--- a/Bank-API.PresentationLayer/appsettings.json
+++ b/Bank-API.PresentationLayer/appsettings.json
@@ -10,8 +10,6 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "DhftOS5uphK3vmCJQrexST1RsyjZBjxXWRgJMFPU4",
-    "Issuer": "https://localhost:7222/",
-    "Audience": "https://localhost:7222/"
+    "Key": "DhftOS5uphK3vmCJQrexST1RsyjZBjxXWRgJMFPU4"
   }
 }
