--- a/Bank-API.PresentationLayer/appsettings.json
+++ b/Bank-API.PresentationLayer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=bank-api;Trusted_Connection=True"
+    "DefaultConnectionString": "Server=localhost;Database=bankapi;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "DhftOS5uphK3vmCJQrexST1RsyjZBjxXWRgJMFPU4"
+  }
 }
