--- a/Bank-API.PresentationLayer/appsettings.json
+++ b/Bank-API.PresentationLayer/appsettings.json
@@ -10,6 +10,8 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "DhftOS5uphK3vmCJQrexST1RsyjZBjxXWRgJMFPU4"
+    "Key": "ACDt1vR3lXToPQ1g3MyN",
+    "Issuer": "http://localhost:7222/",
+    "Audience": "http://localhost:7222/"
   }
 }
