--- a/Bank-API.PresentationLayer/Bank-API.PresentationLayer.csproj
+++ b/Bank-API.PresentationLayer/Bank-API.PresentationLayer.csproj
@@ -19,6 +19,8 @@
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.4.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.4.0" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.10" />
+		<PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.10" />
 	</ItemGroup>
 
 </Project>
