--- a/Bank-API.BusinessLogicLayer/Bank-API.BusinessLogicLayer.csproj
+++ b/Bank-API.BusinessLogicLayer/Bank-API.BusinessLogicLayer.csproj
@@ -9,6 +9,7 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Isopoh.Cryptography.Argon2" Version="1.1.12" />
+		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
 		<PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.10" />
