--- a/Bank-API.PresentationLayer/appsettings.json
+++ b/Bank-API.PresentationLayer/appsettings.json
@@ -15,6 +15,6 @@
     "Audience": "http://localhost:7222/"
   },
   "Card": {
-    "Number": "4141562365230001"
+    "GeneratorFirstNumber": "4141562365230001"
   }
 }
