Create issue a card API (#22)

--- a/Bank-API.PresentationLayer/appsettings.json
+++ b/Bank-API.PresentationLayer/appsettings.json
@@ -13,5 +13,8 @@
     "Key": "ACDt1vR3lXToPQ1g3MyN",
     "Issuer": "http://localhost:7222/",
     "Audience": "http://localhost:7222/"
+  },
+  "Card": {
+    "GeneratorFirstNumber": "4141562365230001"
   }
 }
