--- a/Bank-API.PresentationLayer/appsettings.json
+++ b/Bank-API.PresentationLayer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionString": "Server=localhost;Database=bankapi;Trusted_Connection=True"
+    "DefaultConnectionString": "Server=localhost;Database=bankapi;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
